[tool.poetry]
name = "aste-xffts-merge"
version = "0.1.0"
description = "Merge datasets obtained by the ASTE-XFFTS system into a single file"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/aste-xffts-merge"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
astropy = "^4.3"
numpy = "^1.21"
pandas = "^1.3"
xarray = "^0.20"
xarray-dataclasses = "^0.8"

[tool.poetry.dev-dependencies]
black = "^21.12b"
ipython = "^7.30"
matplotlib = "^3.5"
netcdf4 = "^1.5"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
